Final draft corrections

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -666,3 +666,41 @@ month={June},}
 	title        = {Pseudo-DHT. Distributed Search Algorithm for P2P Video Streaming},
 	howpublished = {\url{https://slideplayer.com/slide/13341399/}}
 }
+
+@misc{webworker,
+	title        = {Using Web Workers},
+	howpublished = {\url{https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API/Using_web_workers}}
+}
+
+@misc{chartjs,
+	title        = {Chart.js},
+	howpublished = {\url{https://www.chartjs.org/}}
+}
+
+@misc{gogo,
+	title        = {Protocol Buffers for Go with Gadgets},
+	howpublished = {\url{https://github.com/gogo/protobuf}}
+}
+
+@misc{gogo-bench,
+	title        = {Benchmarks of Go serialization methods},
+	howpublished = {\url{https://github.com/alecthomas/go_serialization_benchmarks}}
+}
+
+@misc{wiki-upnp,
+	title        = {Universal Plug and Play},
+	howpublished = {\url{https://en.wikipedia.org/wiki/Universal_Plug_and_Play}}
+}
+
+@misc{go-cache,
+	title        = {go-cache},
+	howpublished = {\url{https://github.com/patrickmn/go-cache}}
+}
+
+@misc{promQL,
+	title        = {Querying Prometheus},
+	howpublished = {\url{https://prometheus.io/docs/prometheus/latest/querying/basics/}}
+}
+
+
+
